@@ -27,8 +27,10 @@ class FileStore:
 
     def maplink(self, link, refresh=False):
         if link.md5:
-            key = self.keyfs.STAGEFILE(user="root", index="pypi",
-                                       md5=link.md5 or "unknown_md5",
+            assert len(link.md5) == 32
+            md5a, md5b = link.md5[:16], link.md5[16:]
+            key = self.keyfs.PYPISTAGEFILE(user="root", index="pypi",
+                                       md5a=md5a, md5b=md5b,
                                        filename=link.basename)
         else:
             key = self.keyfs.PYPIFILE_NOMD5(user="root", index="pypi",
